Left Clicker Update
- Added "CPS" slider for determaining how much CPS you want to click
- Added "Allow Breaking Blocks" will disable while hovering over a block
- Changed RangeSliderSetting to use int instead of double